--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
     margin: 0;
     font-size: 32px;
   }
+.banner-top, 
+.banner-bottom {
+  text-align: center;
+  margin: 20px 0;
+}
   
   nav {
     background: orange;
@@ -56,3 +61,4 @@ body {
   }
 a{
     color:white};
+
